refactor(uw-dao):重构 SQL 执行统计相关代码- 修改数据库表结构，优化字段类型和长度 - 重命名部分字段，使用 millis 替代 time，提高语义明确性- 优化 SQL 执行统计的收集和记录逻辑 - 使用 JSON 序列化替代 ToStringBuilder，提高灵活性和可读性 - 优化日期格式化，使用 FastDateFormat